[RW-503] Fix content spacing on simple node and term pages

--- a/html/themes/custom/common_design_subtheme/components/rw-article/rw-article.css
+++ b/html/themes/custom/common_design_subtheme/components/rw-article/rw-article.css
@@ -155,6 +155,6 @@
   border-bottom: none;
 }
 
-.node--announcement--full .rw-article__header {
-  margin-bottom: 24px;
+.rw-article__content--simple {
+  margin-top: 24px;
 }
